--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 						
 						<div class="post_body">
 						
-<p>Rilasciata versione Application Killer 1.0 </p>
+<p>Rilasciata versione<a href="style_demo.html"> Application Killer 1.0</a></p>
+
 
 
 						</div>
@@ -101,7 +102,7 @@
 <li><a href="http://sanniolug.org/">SannioLUG</a></li>
 <li><a href="http://www.google.com/">Google</a> - Web Search</li>
 <li><a href="http://www.unisanniostudent.org">Forum of Unisannio University</a></li>
-<li><a href="http://www.eatebansannin.altervista.org">Esteban Sannin Site</a> - Blog Platform</li>
+<li><a href="http://www.eatebansannin.altervista.org">Esteban Sannin Site</a></li>
 <li><a href="http://cakephp.org/"></a></li>
 							</ul>
 						</div>
