--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						
 						<div class="post_body">
 						
-<p>Rilasciata versione<a href="style_demo.html"> Application Killer 1.0</a></p>
+<p>Rilasciata versione<a href="http://github.com/EstebanSannin/Application-Killer/tree/master#"> Application Killer 1.0</a></p>
 
 
 
