--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <p>Il mio nome è Stefano Viola sono uno studente dell'Università del Sannio laureando in Ingegneria Informatica</p>
 <p>E' da poco che mi dedico al Bash Scripting e penso di approfondire questo linguaggio di programmazione perche lo trovo davvero utile.</p>
 
-<p>Jabber: EstebanSannin@sameplace.cc</p>
+<p>Jabber: esteban@sameplace.cc</p>
 						</div>
 
 					</div>
@@ -110,7 +110,7 @@
 <li><a href="http://www.google.com/">Google</a> - Web Search</li>
 <li><a href="http://www.unisanniostudent.org">Forum of Unisannio University</a></li>
 <li><a href="http://www.eatebansannin.altervista.org">Esteban Sannin Site</a></li>
-<li><a href="http://cakephp.org/"></a></li>
+//<li><a href="http://cakephp.org/"></a></li>
 							</ul>
 						</div>
 
