--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 <p>Lo script permette di visualizzare i canali italiani in streaming utilizzando il player vlc il tutto ovviamente ha una veste grafica gradevole. Per maggiori informazioni vi rimando a questo <a href="http://github.com/hamen/tv-ita/tree/master"> link</a></p>
 			
 					</div>
-				
-
+				</div>
+</div>
 				</div>
                            
 
